--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-<p>TEST</p>
+<!DOCTYPE html>
+<html>
+<head>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <img src="test.png" class="logo"/>
+    </header>
+    <main>
+        <div class="selector">
+            <div>
+                <a href="https://discord.allrounder.ml">
+                    <img src="test.png"/>
+                </a>
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At</p>
+                <a  href="https://discord.allrounder.ml" class="button">Open Discord</a>
+            </div>
+            <div>
+                <a href="https://instagram.allrounder.ml">
+                    <img src="test.png" />
+                </a>
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At</p>
+                <a href="https://instagram.allrounder.ml" class="button">Open Instagram</a>
+            </div>
+            <div>
+                <a>
+                    <img src="test.png"/>
+                </a>
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At</p>
+                <a  class="button">IP: play.allrounder.ml</a>
+            </div>
+        </div>
+    </main>
+</body>
+</html>
