Styling + Main content

--- a/index.html
+++ b/index.html
@@ -2,32 +2,43 @@
 <html>
 <head>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <img src="test.png" class="logo"/>
+        <a href="https://allrounder.ml"><img src="allrounder.png" class="logo" /><h1>Allrounder</h1></a>
     </header>
     <main>
         <div class="selector">
             <div>
                 <a href="https://discord.allrounder.ml">
-                    <img src="test.png"/>
+                    <img src="discord.png"/>
                 </a>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At</p>
+                <h2>Allrounder Discord</h2>
+                <p>
+                    Du bist neu hier? Dann join doch mal dem Discord Server und stelle dich doch mal vor. Zocke mit vielen anderen jede Art von Games. <br>
+                    Alle sind willkommen!
+                </p>
                 <a  href="https://discord.allrounder.ml" class="button">Open Discord</a>
             </div>
             <div>
                 <a href="https://instagram.allrounder.ml">
-                    <img src="test.png" />
+                    <img src="instagram.png" />
                 </a>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At</p>
+                <h2>Allrounder Instagram</h2>
+                <p>Check unsere Instagram Page aus. Siehe die letzen Clips der AR Member und viel mehr.</p>
                 <a href="https://instagram.allrounder.ml" class="button">Open Instagram</a>
             </div>
             <div>
                 <a>
-                    <img src="test.png"/>
+                    <img src="minecraft.png"/>
                 </a>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At</p>
+                <h2>AllCraft</h2>
+                <p>AllCraft geht in die nächste Runde! <br>
+                    Alle aus dem Discord Server sind eingeladen. Melde ich heute noch auf über dem Discord Server an und füge dich der Whitelist hinzu.
+                </p>
                 <a  class="button">IP: play.allrounder.ml</a>
             </div>
         </div>
