--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </a>
                 <h2>AllCraft</h2>
                 <p>AllCraft geht in die nächste Runde! <br>
-                    Alle aus dem Discord Server sind eingeladen. Melde ich heute noch auf über dem Discord Server an und füge dich der Whitelist hinzu.
+                    Alle aus dem Discord Server sind eingeladen. Melde dich heute noch über dem Discord Server an, und füge dich der Whitelist hinzu.
                 </p>
                 <a  class="button">IP: play.allrounder.ml</a>
             </div>
