Style and Copy for IP

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="style.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
+    
+    <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -39,9 +42,12 @@
                 <p>AllCraft geht in die nächste Runde! <br>
                     Alle aus dem Discord Server sind eingeladen. Melde dich heute noch über dem Discord Server an, und füge dich der Whitelist hinzu.
                 </p>
-                <a  class="button">IP: play.allrounder.ml</a>
+                <a type="button" id="IP" class="button" onclick="CopyIP()"></a>
+
             </div>
+
         </div>
     </main>
+    <div id="infoBox">d</span>
 </body>
 </html>
