Avoid reloading website on navbar click

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <a href="https://allrounder.ml"><img src="imgs/allrounder.png" class="logo" /><h1>Allrounder</h1></a>
+        <a href="#"><img src="imgs/allrounder.png" class="logo" /><h1>Allrounder</h1></a>
     </header>
     <main>
         <div class="selector">
