--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
 
+  <script src="js/jquery-3.6.0.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/script.js"></script>
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -76,7 +77,7 @@
             AllCraft geht in die nächste Runde! Alle aus dem Discord Server sind eingeladen.
             Melde dich heute noch über dem Discord Server an, und füge dich der Whitelist hinzu.
           </p>
-          <a id="IP" onclick="CopyIP()" class="text-white fw-bold btn mt-auto mb-2 btn-light"></a>
+          <a id="IP" tabindex="0" class="btn popover-dismiss text-white fw-bold btn mt-auto mb-2 btn-light" role="button" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-content="Copied!"></a>
         </div>
       </div>
     </div>
