--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   <script src="js/jquery-3.6.0.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="js/langs.js"></script>
   <script src="js/script.js"></script>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
@@ -25,6 +26,16 @@
           class="rounded-3 d-inline-block align-text-top me-3">
         Allrounder
       </a>
+
+      <div class="nav-item dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownLanguages" data-bs-toggle="dropdown" aria-expanded="false">
+          Languages
+        </button>
+        <ul class="dropdown-menu bg-dark" aria-labelledby="dropdownLanguages">
+          <li class="d-flex px-1"><button class="dropdown-item text-white" id="langEnglish"><img src="imgs/america.svg" width="30px" class="me-2">English</button></li>
+          <li class="d-flex px-1"><button class="dropdown-item text-white" id="langGerman"><img src="imgs/germany.svg" width="30px" class="me-2">German</button></li>
+        </ul>
+      </div>
     </div>
   </nav>
 
@@ -34,11 +45,8 @@
         <img class="rounded-3" src="imgs/allrounder.png" height="100" alt="Allrounder logo">
         <h1 class="display-5 my-3 fw-bold text-white">Allrounder</h1>
         <div class="col-lg-6 mx-auto">
-          <p class="fs-5 mb-4">
-            Du hast bock neue Leute zum zocken zu finden?
-            Riesige server sind dir zu chaotisch?
-            Dann besuche doch mal den Allrounder Clan.
-            Alle sind willkommen!
+          <p class="fs-5 mb-4" id="heroText">
+            <!-- Loaded via script.js -->
           </p>
         </div>
       </div>
@@ -49,10 +57,8 @@
         <img src="imgs/discord.png" class="card-img-top" alt="Discord">
         <div class="card-body d-flex flex-column py-5">
           <h3 class="card-title">Allrounder Discord</h3>
-          <p class="card-text mb-4">
-            Du bist neu hier?
-            Dann join doch mal dem Discord Server und stelle dich doch mal vor.
-            Zocke mit vielen anderen jede Art von Games. Alle sind willkommen!
+          <p class="card-text mb-4" id="discordText">
+            <!-- Loaded via script.js -->
           </p>
           <a href="https://discord.allrounder.ml" class="text-white fw-bold btn mt-auto mb-2 btn-light">Discord</a>
         </div>
@@ -62,9 +68,8 @@
         <img src="imgs/instagram.png" class="card-img-top" alt="Instagram">
         <div class="card-body d-flex flex-column py-5">
           <h3 class="card-title">Allrounder Instagram</h3>
-          <p class="card-text">
-            Check unsere Instagram Page aus.
-            Siehe die letzen Clips der AR Member und viel mehr.
+          <p class="card-text" id="instagramText">
+            <!-- Loaded via script.js -->
           </p>
           <a href="https://instagram.allrounder.ml" class="text-white fw-bold btn mt-auto mb-2 btn-light">Instagram</a>
         </div>
@@ -74,9 +79,8 @@
         <img src="imgs/minecraft.png" class="card-img-top" alt="Minecraft">
         <div class="card-body d-flex flex-column py-5">
           <h3 class="card-title">AllCraft</h3>
-          <p class="card-text">
-            AllCraft geht in die nächste Runde! Alle aus dem Discord Server sind eingeladen.
-            Melde dich heute noch über dem Discord Server an, und füge dich der Whitelist hinzu.
+          <p class="card-text" id="allcraftText">
+            <!-- Loaded via script.js -->
           </p>
           <a id="IP" tabindex="0" class="btn popover-dismiss text-white fw-bold btn mt-auto mb-2 btn-light" role="button" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-content="Copied!"></a>
         </div>
