Added Dynmap Page

--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
             <!-- Loaded via script.js -->
           </p>
           <a id="IP" tabindex="0" class="btn popover-dismiss text-white fw-bold btn mt-auto mb-2 btn-light" role="button" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-content="Copied!"></a>
+          <a href="pages/dynmap.html" class="text-white fw-bold btn mt-auto mb-2 btn-light">Dynmap</a>
         </div>
       </div>
     </div>
   </main>
-
 
   <footer
     class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top border-secondary">
