Updated Allrounder Logo from PDF to SVG

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/x-icon" href="imgs/allrounder.png">
+  <link rel="icon" type="image/x-icon" href="imgs/allrounder.svg">
 
   <script src="js/jquery-3.6.0.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
@@ -22,7 +22,7 @@
   <nav class="navbar navbar-dark">
     <div class="container-fluid">
       <a class="navbar-brand d-flex align-items-center" href="#">
-        <img src="imgs/allrounder.png" alt="Allrounder logo" width="50"
+        <img src="imgs/allrounder.svg" alt="Allrounder logo" width="50"
           class="rounded-3 d-inline-block align-text-top me-3">
         Allrounder
       </a>
@@ -42,7 +42,7 @@
   <main>
     <div class="text-secondary text-center mt-3">
       <div class="py-1">
-        <img class="rounded-3" src="imgs/allrounder.png" height="100" alt="Allrounder logo">
+        <img class="rounded-3" src="imgs/allrounder.svg" style="height: 100px;" alt="Allrounder logo">
         <h1 class="display-5 my-3 fw-bold text-white">Allrounder</h1>
         <div class="col-lg-6 mx-auto">
           <p class="fs-5 mb-4" id="heroText">
