--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <!-- Loaded via script.js -->
           </p>
           <a id="IP" tabindex="0" class="btn popover-dismiss text-white fw-bold btn mt-auto mb-2 btn-light" role="button" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-content="Copied!"></a>
-          <a href="http://play.allrounder.ml:8080/" class="text-white fw-bold btn mt-auto mb-2 btn-light">Dynmap</a>
+          <a href="http://dynmap.allrounder.ml/" class="text-white fw-bold btn mt-auto mb-2 btn-light">Dynmap</a>
         </div>
       </div>
     </div>
