Updated URL in HTML
Updated URL from allrounder.ml to allrounderclan.com

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <p class="card-text mb-4" id="discordText">
             <!-- Loaded via script.js -->
           </p>
-          <a href="https://discord.allrounder.ml" class="text-white fw-bold btn mt-auto mb-2 btn-light">Discord</a>
+          <a href="https://discord.allrounderclan.com" class="text-white fw-bold btn mt-auto mb-2 btn-light">Discord</a>
         </div>
       </div>
 
@@ -71,7 +71,7 @@
           <p class="card-text" id="instagramText">
             <!-- Loaded via script.js -->
           </p>
-          <a href="https://instagram.allrounder.ml" class="text-white fw-bold btn mt-auto mb-2 btn-light">Instagram</a>
+          <a href="https://www.instagram.com/allrounder_clan/" class="text-white fw-bold btn mt-auto mb-2 btn-light">Instagram</a>
         </div>
       </div>
 
@@ -83,7 +83,7 @@
             <!-- Loaded via script.js -->
           </p>
           <a id="IP" tabindex="0" class="btn popover-dismiss text-white fw-bold btn mt-auto mb-2 btn-light" role="button" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-content="Copied!"></a>
-          <a href="http://dynmap.allrounder.ml/" class="text-white fw-bold btn mt-auto mb-2 btn-light">Dynmap</a>
+          <a href="http://dynmap.allrounderclan.com/" class="text-white fw-bold btn mt-auto mb-2 btn-light">Dynmap</a>
         </div>
       </div>
     </div>
